Linked in collection has user count of 0 #55344

Closed
opened 2018-06-06 10:48:00 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 783d31c3a3 (blender2.8 HEAD)

Short description of error
If you link a collection in 2.8, and save the file and re-open the dupli_group is gone.
It seems the user count for the linked collection is 0.

Exact steps for others to reproduce the error

  • Save startup file.
  • Open a new file.
  • Link the collection of the startup file instancing it.
  • Check users of collection, it will be 0.
  • Save and reload the file, the collection is gone.
**Blender Version** Broken: 783d31c3a34e (blender2.8 HEAD) **Short description of error** If you link a collection in 2.8, and save the file and re-open the dupli_group is gone. It seems the user count for the linked collection is 0. **Exact steps for others to reproduce the error** * Save startup file. * Open a new file. * Link the collection of the startup file instancing it. * Check users of collection, it will be 0. * Save and reload the file, the collection is gone.
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Brecht Van Lommel was assigned by Dalai Felinto 2018-06-06 10:48:27 +02:00

This issue was referenced by c4ce4034e6

This issue was referenced by c4ce4034e67b8d7030e6ec932b264984e007e371

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55344
No description provided.