Fix T55344: linked collection instance has user count 0.